# OpenAkashic

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  glama.json  install.ps1  install.sh  llms-install.md  pyproject.toml  server.json  smithery.yaml
api/: .env.example  README.md  docker-compose.yml  requirements.txt
api/app/: config.py  db.py  main.py  retrieval.py  schemas.py  security.py  utils.py
api/db/init/: 001_schema.sql  002_seed.sql
api/scripts/: smoke_test.sh
closed-web/: AGENTS.md  README.md
closed-web/doc/agents/: Agent Setup Snippets Capsule.md  Agent Setup Snippets.md  Agent Skills Contract.md  Claude Code CLAUDE.md Template.md  Codex AGENTS Template Capsule.md  Codex AGENTS Template.md  Codex Central Memory Setup.md  Codex MCP Deployment.md  Distributed Agent Memory Contract.md  Knowledge Distillation Guide.md  MCP Debugging and Logs.md  OpenAkashic Agent Contribution Guide.md  OpenAkashic MCP Guide Capsule.md  OpenAkashic MCP Guide.md  OpenAkashic Skills Guide.md  User Token Agent Access.md  agent-design-patterns.md  agent.md  clarify-ambiguous-instructions.md  mcp-advanced-patterns.md
closed-web/doc/general/: Open and Closed Akashic Strategy.md  OpenAkashic Roadmap Capsule.md  cloudflare-useragent-block.md  plan.md  (+2 more)
closed-web/personal_vault/: README.md
closed-web/server/: .env.example  Dockerfile  README.md  docker-compose.yml  requirements.txt
mcp/: README.md  server.json
mcp/examples/: claude-code.json  cline.json  codex.toml  continue.json  cursor.json  gemini-cli.json  vscode.json  windsurf.json
skills/openakashic/: SKILL.md
(+219 files in other folders)
